@@ -8,8 +8,12 @@ DEFAULT_SHELL=/bin/bash
 XAUTH_LOCATION="%%XAUTHCMDPATH%%"
 CPUSET_MOUNT_POINT="/dev/oar_cgroups_links"
 OARDIR="%%OARDIR%%"
+OAR_RUNTIME_DIRECTORY="/tmp/oar_runtime"
 
 export PATH=$OARDIR/oardodo:$PATH
+
+# File generated by job resource manager on all job nodes
+JOBENVFILE="$OAR_RUNTIME_DIRECTORY/${OAR_CPUSET##*/}.env"
 
 OLDUMASK=$(umask)
 umask 0022
@@ -59,6 +63,7 @@ then
     if [ "$OAR_CPUSET" != "" ]
     then
         add_process_to_cpuset $OAR_CPUSET $$ $PPID || exit 62
+        [ -r "$JOBENVFILE" ] && source $JOBENVFILE
     fi
     $OARDIR/oardodo/oardodo renice 0 $$ $PPID > /dev/null 2>&1
     export SHELL=$DEFAULT_SHELL
@@ -87,6 +92,7 @@ else
     #Change tty owner
     TTY=$(tty) && test -e $TTY && $OARDIR/oardodo/oardodo chown $OAR_JOB_USER:oar $TTY && $OARDIR/oardodo/oardodo chmod 660 $TTY
     $OARDIR/oardodo/oardodo renice 0 $$ $PPID > /dev/null 2>&1
+    [ -r "$JOBENVFILE" ] && source $JOBENVFILE
     if [ "$1" = "" ]
     then
         # Simulate initial login
